# simple-prompt-archive

./: .gitignore  AGENTS.md  PRD.md  README.md  main.py  pyproject.toml
app/: archive.py  console.py  console_handlers.py  console_io.py  console_views.py  constants.py  main.py  prompt_schema.py  storage.py  utils.py
app/archive/: __init__.py  prompts.py  queries.py  selection.py
app/console/: __init__.py  constants.py  handlers.py  io.py  runner.py  views.py
app/console/handlers/: __init__.py  file_flows.py  menu.py  mutation_flows.py  prompt_flows.py
app/storage/: __init__.py  files.py  markdown.py  paths.py
app/storage/markdown/: __init__.py  exporter.py  formatting.py  planning.py  validation.py
app/tests/: conftest.py  test_archive.py  test_console.py  test_console_e2e.py  test_module_boundaries.py  test_storage.py
prompt_archive/: __init__.py  console.py  markdown_export.py  prompts.py  storage.py
tests/: test_console.py  test_file_io.py  test_prompt_operations.py  test_pytest_environment.py
