[project]
name = "simple-prompt-archive"
version = "0.1.0"
description = "Console prompt management tool specified by PRD.md."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]
